src/styles/index.module.css
span.colored {
    color: var(--color-secondary-300);
}

.landing {
    position: relative;

    display: flex;
    flex-direction: column;

    justify-content: flex-start;
    align-items: center;

    height: 100vh;
    width: 100%;

    padding-top: calc(var(--height-header) * 3);
}

.landing * {
    z-index: 1;
}

.landing h1 {
    /* margin-top: calc(var(--height-header) * 3); */
    line-height: 1em;

    font-size: 10vmin;
    font-weight: normal;
    font-family: var(--font-main);
    letter-spacing: var(--main-font-letter-spacing);
    line-height: var(--main-font-line-height);
    text-align: center;

    color: var(--color-secondary-300);
}
.landing h2 {
    font-size: 5vmin;
    font-weight: normal;
    font-family: var(--font-main);
    letter-spacing: var(--main-font-letter-spacing);
    text-align: center;
}

@media (max-width: 600px) {
    .landing {
        padding-top: calc(var(--height-header) * 1.2);
    }

    .landing h1 {
        font-size: 3.5rem;
    }
    .landing h2 {
        margin-top: 2.5rem;
        font-size: 2rem;
        line-height: 1em;
    }
}

.landing p {
    text-align: center;

    width: 25vmax;
    margin-top: 15vmin;

    margin-inline: auto;
}

.landing .background {
    position: absolute;
    top: 0;
    left: 0;

    height: 100%;
    width: 100%;

    background: radial-gradient(rgba(255, 255, 255, 0.15) 8%, transparent 8%);
    background-size: 4.5vh 4.5vh;
    background-position: 0% 0%;
    z-index: 0;
    pointer-events: none;

    z-index: 0;
}

.landing .colored_spacer {
    position: relative;
    width: 100%;
    height: 9vh;

    margin-top: auto;

    background: var(--color-secondary-300);
    z-index: 2;
}

.colored_spacer::before {
    content: "";
    position: absolute;
    bottom: 0;

    background: var(--color-accent-700);
    height: 33.3%;
    width: 100%;
}
.colored_spacer::after {
    content: "";
    position: absolute;
    bottom: 33.3%;

    background: var(--color-accent-500);
    height: 33.3%;
    width: 100%;
}

.briefing,
.about,
.contact {
    padding-top: var(--height-header);
    width: var(--width-main-responsive);

    margin: 0 auto;
}

.briefing {
    min-height: 100vh;
    min-height: 100dvh;

    display: flex;
    flex-direction: column;
    align-items: center;
}

.title {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    margin-top: var(--margin-top);
    margin-bottom: var(--margin-bottom) 0;
}

.title h2 {
    display: block;
    text-align: center;
    font-size: 3rem;
    font-weight: normal;
    font-family: var(--font-main);
    letter-spacing: var(--main-font-letter-spacing);
    line-height: var(--main-font-line-height);
}

.description {
    margin-top: calc(var(--margin-top) * 0.2);
    margin-bottom: calc(var(--margin-top) * 0.5);
    width: 50%;
}

.description p {
    text-align: center;
    color: var(--color-grey);
}

.grid {
    display: grid;
    grid-auto-flow: row;
    grid-auto-columns: minmax(0, 1fr);
    grid-gap: max(2vmin, 1rem);

    justify-content: space-between;

    padding: 0 var(--padding-side);
}

@media (min-width: 600px) {
    .grid > *:nth-child(1) {
        animation-delay: calc(var(--animation-duration) * 0.4);
    }
    .grid > *:nth-child(2) {
        animation-delay: calc(var(--animation-duration) * 0.6);
    }
    .grid > *:nth-child(3) {
        animation-delay: calc(var(--animation-duration) * 0.8);
    }
    .grid > *:nth-child(4) {
        animation-delay: calc(var(--animation-duration) * 1);
    }
}

.foldDown {
    animation: foldDown var(--animation-duration) ease-in forwards;
    opacity: 0;
}

@keyframes foldDown {
    0% {
        opacity: 0;
        translate: 0 -50%;
    }
    100% {
        opacity: 1;
        translate: 0% 0%;
    }
}

@media (min-width: 990px) {
    .grid {
        grid-auto-flow: column;
        padding: 0 0;
    }
}
@media (max-width: 990px) {
    .grid {
        padding: 0 0;
    }
}
@media (max-width: 500px) {
    .description {
        width: 100%;
    }
    .title {
        margin-top: 0;
    }
}

.testing {
    height: 100vh;
}

span.colored {
    color: var(--color-secondary-300);
}

.navigation {
    pointer-events: none;

    position: fixed;
    top: 0;
    left: 0;

    display: flex;
    flex-direction: column;

    justify-content: flex-end;
    align-items: center;

    height: 100%;
    width: 100%;

    z-index: 20;
}

.navigation .advance_button {
    display: flex;
    pointer-events: all;
    cursor: pointer;

    flex-direction: column;
    justify-content: center;
    align-items: center;

    height: 6vh;
    width: 6vh;

    margin-bottom: var(--margin-bottom);
    padding: 1vh;
    border-radius: 100%;
    outline: 0.5vh solid var(--color-secondary-300);

    background: var(--color-main-900);

    transition: 0.2s ease-in-out;
    transition: outline-width 0.1s ease;

    user-select: none;

    animation: jump-in calc(var(--animation-duration) * 0.5) ease-in forwards;
    animation-delay: calc(var(--animation-duration) * 2);
    opacity: 0;
}

@keyframes jump-in {
    0% {
        opacity: 0;
        translate: 0 -30%;
    }
    100% {
        opacity: 1;
        translate: 0% 0%;
    }
}

.navigation svg {
    display: block;

    height: 100%;
    width: 80%;

    fill: var(--color-secondary-300);
}

.advance_button:hover {
    transform: scale(1.05);
}

.advance_button:active {
    transform: scale(0.9);
    outline-width: 0;
}

.fadeIn {
    animation: fadeIn calc(var(--animation-duration) * 0.2) ease-in forwards;
    animation-delay: calc(var(--animation-duration));
    opacity: 0;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

.placeholder {
    height: 300px;
    width: 300px;
    margin: 200px auto;
    background-color: var(--color-secondary-300);
}

